# piper_http_server

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  connection.cpp  connection.hpp  create_win32_kit.bat  create_wsl_kit.bat  demo.cpp  header.hpp  piper_http_server.cpp  piper_manager.cpp  piper_manager.h  piper_synth.cpp  piper_synth.h  piper_synth_impl.h  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
deployment/: installLinuxScripts.bat  run_once_to_setup.bat  update_piper_model_onnx.bat
deployment/linuxScripts/: changeModel  run_piper
windows_deployment/: ReadMe.txt  run_piper_server.bat
windows_deployment/model/: ReadMe.txt
wsl_deployment/: 00_ReadMe.txt  0_ReadMe.txt  0_install_WSL.bat  1_run_once_to_setup.bat  2_installLinuxScripts.bat  3_update_piper_model_onnx.bat  4_run_piper_http_server.bat  99_remove_u_piper2.bat  ReadMe.txt  installLinuxScripts.bat  remove_u_piper2.bat  run_once_to_setup.bat  update_piper_model_onnx.bat
wsl_deployment/linuxScripts/: changeModel  run_piper
